--- a/CooperationApp/Views/Cell/ScheduleCell.xib
+++ b/CooperationApp/Views/Cell/ScheduleCell.xib
@@ -10,51 +10,49 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="ScheduleCell" id="9dy-wa-lGw" customClass="ScheduleCollectionViewCell" customModule="CooperationApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="286" height="91"/>
+            <rect key="frame" x="0.0" y="0.0" width="286" height="156"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="274-tT-jhh">
-                <rect key="frame" x="0.0" y="0.0" width="286" height="91"/>
+                <rect key="frame" x="0.0" y="0.0" width="286" height="156"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="xLE-XP-Flv">
-                        <rect key="frame" x="15" y="15" width="42.5" height="61"/>
+                        <rect key="frame" x="15" y="15" width="39.5" height="126"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="List" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cT6-bU-Mzo">
+                                <rect key="frame" x="0.0" y="0.0" width="39.5" height="34.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XG3-Uc-BmI">
-                                <rect key="frame" x="0.0" y="0.0" width="42.5" height="27"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                <rect key="frame" x="0.0" y="44.5" width="39.5" height="33"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d3k-rj-R6s">
-                                <rect key="frame" x="0.0" y="37" width="42.5" height="24"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <rect key="frame" x="0.0" y="87.5" width="39.5" height="38.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="12"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                     </stackView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="List" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cT6-bU-Mzo">
-                        <rect key="frame" x="243.5" y="35.5" width="27.5" height="20.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="xLE-XP-Flv" firstAttribute="leading" secondItem="274-tT-jhh" secondAttribute="leading" constant="15" id="Idr-V6-Nj5"/>
                     <constraint firstAttribute="bottom" secondItem="xLE-XP-Flv" secondAttribute="bottom" constant="15" id="do4-On-H7G"/>
                     <constraint firstItem="xLE-XP-Flv" firstAttribute="top" secondItem="274-tT-jhh" secondAttribute="top" constant="15" id="hyB-nU-Vbg"/>
-                    <constraint firstAttribute="trailing" secondItem="cT6-bU-Mzo" secondAttribute="trailing" constant="15" id="xWk-wX-z3X"/>
-                    <constraint firstItem="cT6-bU-Mzo" firstAttribute="centerY" secondItem="274-tT-jhh" secondAttribute="centerY" id="zSR-bg-jsO"/>
                 </constraints>
             </collectionViewCellContentView>
-            <size key="customSize" width="286" height="91"/>
+            <size key="customSize" width="286" height="156"/>
             <connections>
                 <outlet property="cardDateLabel" destination="d3k-rj-R6s" id="fqX-3h-Qc5"/>
                 <outlet property="cardlabel" destination="XG3-Uc-BmI" id="77j-KA-eh8"/>
                 <outlet property="listName" destination="cT6-bU-Mzo" id="aDL-BO-m4S"/>
             </connections>
-            <point key="canvasLocation" x="342.02898550724638" y="120.20089285714285"/>
+            <point key="canvasLocation" x="340.57971014492756" y="141.96428571428569"/>
         </collectionViewCell>
     </objects>
 </document>
