--- a/CooperationApp/Views/Cell/DateCell.xib
+++ b/CooperationApp/Views/Cell/DateCell.xib
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -10,30 +11,107 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="DateCell" id="D2l-cy-JXO" customClass="DateCollectionViewCell" customModule="CooperationApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="262" height="191"/>
+            <rect key="frame" x="0.0" y="0.0" width="225" height="191"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="DateCell" insetsLayoutMarginsFromSafeArea="NO" id="jdw-rT-G6M">
-                <rect key="frame" x="0.0" y="0.0" width="262" height="191"/>
+                <rect key="frame" x="0.0" y="0.0" width="225" height="191"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eAn-4m-nWJ">
-                        <rect key="frame" x="110" y="85" width="42" height="21"/>
+                        <rect key="frame" x="92" y="2" width="41.5" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="kF7-Ka-AJs">
+                        <rect key="frame" x="80" y="27.5" width="65" height="158.5"/>
+                        <subviews>
+                            <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="uYI-cf-ACB">
+                                <rect key="frame" x="0.0" y="0.0" width="65" height="48.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1ㅁㄴㅁㄴㅇㅁㄴㅇ" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cm2-yh-KvD">
+                                        <rect key="frame" x="0.0" y="0.0" width="65" height="48.5"/>
+                                        <color key="backgroundColor" red="0.231372565" green="0.090196087960000004" blue="0.56862747670000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="7"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="Cm2-yh-KvD" secondAttribute="bottom" id="HzH-UM-fMK"/>
+                                    <constraint firstItem="Cm2-yh-KvD" firstAttribute="leading" secondItem="uYI-cf-ACB" secondAttribute="leading" id="O0y-qV-Lba"/>
+                                    <constraint firstItem="Cm2-yh-KvD" firstAttribute="top" secondItem="uYI-cf-ACB" secondAttribute="top" id="k4Y-Nd-7c5"/>
+                                    <constraint firstAttribute="trailing" secondItem="Cm2-yh-KvD" secondAttribute="trailing" id="vwQ-Ci-7bf"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aY2-MV-0p2">
+                                <rect key="frame" x="0.0" y="53.5" width="65" height="50"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LzY-ad-aEf">
+                                        <rect key="frame" x="0.0" y="0.0" width="65" height="50"/>
+                                        <color key="backgroundColor" red="0.93725490570000003" green="0.52549022440000004" blue="0.20000001789999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="7"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="LzY-ad-aEf" firstAttribute="leading" secondItem="aY2-MV-0p2" secondAttribute="leading" id="AeO-H6-Saw"/>
+                                    <constraint firstAttribute="bottom" secondItem="LzY-ad-aEf" secondAttribute="bottom" id="NcJ-t8-KWB"/>
+                                    <constraint firstAttribute="trailing" secondItem="LzY-ad-aEf" secondAttribute="trailing" id="Rka-G4-L1F"/>
+                                    <constraint firstItem="LzY-ad-aEf" firstAttribute="top" secondItem="aY2-MV-0p2" secondAttribute="top" id="emY-bh-XwP"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5ZX-1s-uHc">
+                                <rect key="frame" x="0.0" y="108.5" width="65" height="50"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GIY-o7-zoO">
+                                        <rect key="frame" x="0.0" y="0.0" width="65" height="50"/>
+                                        <color key="backgroundColor" red="0.1686274707" green="0.39607840779999998" blue="0.61960786580000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="7"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="GIY-o7-zoO" firstAttribute="leading" secondItem="5ZX-1s-uHc" secondAttribute="leading" id="052-PX-nCO"/>
+                                    <constraint firstAttribute="bottom" secondItem="GIY-o7-zoO" secondAttribute="bottom" id="AZX-eW-b4Q"/>
+                                    <constraint firstAttribute="trailing" secondItem="GIY-o7-zoO" secondAttribute="trailing" id="WOZ-Sg-wWQ"/>
+                                    <constraint firstItem="GIY-o7-zoO" firstAttribute="top" secondItem="5ZX-1s-uHc" secondAttribute="top" id="nEd-Wv-F99"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="eAn-4m-nWJ" firstAttribute="centerY" secondItem="jdw-rT-G6M" secondAttribute="centerY" id="FWe-ud-7dm"/>
+                    <constraint firstItem="eAn-4m-nWJ" firstAttribute="top" secondItem="jdw-rT-G6M" secondAttribute="top" constant="2" id="2TW-2V-smb"/>
                     <constraint firstItem="eAn-4m-nWJ" firstAttribute="centerX" secondItem="jdw-rT-G6M" secondAttribute="centerX" id="cR4-Zu-VeM"/>
+                    <constraint firstItem="kF7-Ka-AJs" firstAttribute="top" secondItem="eAn-4m-nWJ" secondAttribute="bottom" constant="5" id="iUP-9s-LE9"/>
+                    <constraint firstAttribute="bottom" secondItem="kF7-Ka-AJs" secondAttribute="bottom" constant="5" id="v4S-KR-Msu"/>
+                    <constraint firstItem="kF7-Ka-AJs" firstAttribute="centerX" secondItem="jdw-rT-G6M" secondAttribute="centerX" id="zsB-7I-mZW"/>
                 </constraints>
             </collectionViewCellContentView>
-            <size key="customSize" width="262" height="191"/>
+            <size key="customSize" width="225" height="191"/>
             <connections>
                 <outlet property="cellBackground" destination="jdw-rT-G6M" id="t46-da-9oq"/>
                 <outlet property="dateLabel" destination="eAn-4m-nWJ" id="kZo-yb-qh7"/>
+                <outlet property="event1" destination="Cm2-yh-KvD" id="61I-72-K0H"/>
+                <outlet property="event2" destination="LzY-ad-aEf" id="Oyx-FM-ZjF"/>
+                <outlet property="event3" destination="GIY-o7-zoO" id="JC1-nK-Wei"/>
+                <outlet property="eventVStackView" destination="kF7-Ka-AJs" id="krw-xB-JaM"/>
+                <outlet property="eventView_V1" destination="uYI-cf-ACB" id="xJE-YH-oz3"/>
+                <outlet property="eventView_V2" destination="aY2-MV-0p2" id="E6Y-Wj-L8I"/>
+                <outlet property="eventView_V3" destination="5ZX-1s-uHc" id="iHf-os-J0g"/>
             </connections>
-            <point key="canvasLocation" x="247.82608695652175" y="155.69196428571428"/>
+            <point key="canvasLocation" x="221.01449275362322" y="155.69196428571428"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
