--- a/ToyProjectManagementApp/Views/Base.lproj/LaunchScreen.storyboard
+++ b/ToyProjectManagementApp/Views/Base.lproj/LaunchScreen.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_noBackground" translatesAutoresizingMaskIntoConstraints="NO" id="M69-rw-Meu">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logoNoBackgroundDark" translatesAutoresizingMaskIntoConstraints="NO" id="M69-rw-Meu">
                                 <rect key="frame" x="130" y="357" width="130" height="130"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="130" id="6Vk-1I-2FA"/>
@@ -39,7 +39,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="icon_noBackground" width="569" height="632"/>
+        <image name="logoNoBackgroundDark" width="568" height="619"/>
         <namedColor name="primaryColor">
             <color red="0.72941176470588232" green="0.59999999999999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
