logo, logoLabel 만들기, custom textfield 만들기

--- a/ToyProjectManagementApp/Views/Main.storyboard
+++ b/ToyProjectManagementApp/Views/Main.storyboard
@@ -74,7 +74,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="bottom" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="KDw-FV-De2">
                                 <rect key="frame" x="14" y="62" width="91.5" height="50"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="axg-aW-fLD">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="axg-aW-fLD" customClass="logoImageView">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <color key="tintColor" systemColor="systemMintColor"/>
                                         <constraints>
@@ -82,7 +82,7 @@
                                             <constraint firstAttribute="width" secondItem="axg-aW-fLD" secondAttribute="height" id="rNk-yy-J1O"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Toy" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9lI-dw-qQw">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Toy" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9lI-dw-qQw" customClass="LogoLabel" customModule="ToyProjectManagementApp" customModuleProvider="target">
                                         <rect key="frame" x="54" y="20" width="37.5" height="30"/>
                                         <color key="tintColor" name="primaryColor"/>
                                         <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="25"/>
@@ -91,6 +91,14 @@
                                     </label>
                                 </subviews>
                             </stackView>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OaA-9G-Zak" customClass="CustomTextField" customModule="ToyProjectManagementApp" customModuleProvider="target">
+                                <rect key="frame" x="14" y="149" width="386" height="52"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="52" id="HZe-en-DW5"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SNQ-KN-YDM">
                                 <rect key="frame" x="109" y="324" width="205" height="60"/>
                                 <constraints>
@@ -105,22 +113,39 @@
                                     <segue destination="PS6-9G-RM8" kind="show" id="kxv-Vb-bph"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mhe-ak-8pz" customClass="CustomTextField" customModule="ToyProjectManagementApp" customModuleProvider="target">
+                                <rect key="frame" x="14" y="211" width="386" height="52"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="52" id="5xC-mS-ZxQ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="JEK-on-6Ci"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="OaA-9G-Zak" firstAttribute="leading" secondItem="KDw-FV-De2" secondAttribute="leading" id="5hU-lT-FlR"/>
                             <constraint firstItem="9Jn-vX-zUc" firstAttribute="bottom" secondItem="JEK-on-6Ci" secondAttribute="bottom" constant="24" id="84Z-Ps-XUp"/>
+                            <constraint firstItem="mhe-ak-8pz" firstAttribute="leading" secondItem="OaA-9G-Zak" secondAttribute="leading" id="9ZJ-Tb-qyw"/>
                             <constraint firstItem="9Jn-vX-zUc" firstAttribute="centerX" secondItem="sIi-fl-xxQ" secondAttribute="centerX" id="ATC-rE-B4l"/>
+                            <constraint firstItem="mhe-ak-8pz" firstAttribute="trailing" secondItem="OaA-9G-Zak" secondAttribute="trailing" id="Hi4-Kl-nFH"/>
+                            <constraint firstItem="mhe-ak-8pz" firstAttribute="top" secondItem="OaA-9G-Zak" secondAttribute="bottom" constant="10" id="Kde-Dl-Bcg"/>
                             <constraint firstItem="KDw-FV-De2" firstAttribute="leading" secondItem="JEK-on-6Ci" secondAttribute="leading" constant="14" id="YJ5-z8-C2N"/>
                             <constraint firstItem="KDw-FV-De2" firstAttribute="top" secondItem="JEK-on-6Ci" secondAttribute="top" constant="14" id="fo0-DR-JGU"/>
+                            <constraint firstItem="JEK-on-6Ci" firstAttribute="trailing" secondItem="OaA-9G-Zak" secondAttribute="trailing" constant="14" id="joq-4m-Onx"/>
+                            <constraint firstItem="OaA-9G-Zak" firstAttribute="top" secondItem="KDw-FV-De2" secondAttribute="bottom" constant="37" id="z7c-zf-pBX"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="1Ws-kB-doM"/>
                     <connections>
                         <outlet property="appleLoginButton" destination="WD6-Yx-6Qb" id="823-Ky-kNi"/>
+                        <outlet property="emailTextField" destination="OaA-9G-Zak" id="rIQ-jI-hEl"/>
                         <outlet property="googleLoginButton" destination="SnH-Sj-URX" id="Mdw-LT-EDz"/>
-                        <outlet property="logoImageView" destination="axg-aW-fLD" id="O4k-FZ-s8J"/>
-                        <outlet property="logoTitleLabel" destination="9lI-dw-qQw" id="FPO-3o-OCl"/>
+                        <outlet property="logoImageView" destination="axg-aW-fLD" id="npr-QE-95b"/>
+                        <outlet property="logoLabel" destination="9lI-dw-qQw" id="x1n-QD-62b"/>
+                        <outlet property="logoStackView" destination="KDw-FV-De2" id="cQO-Qx-Lvo"/>
+                        <outlet property="passwordTextField" destination="mhe-ak-8pz" id="HQb-Wx-alL"/>
                         <outlet property="signInLoginButton" destination="SNQ-KN-YDM" id="PjE-iS-Ygy"/>
                     </connections>
                 </viewController>
